Archive2/9f/6c9ea6421cc0c0/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:14:4: error: constructor for 'test' creates a delegation cycle [-Wdelegating-ctor-cycles]
        : test{t{v}}
          ^
1 error generated.
